--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
-    "redis": "^4.6.4",
-    "socket.io": "^4.6.1"
+    "redis": "^4.6.4"
   }
 }
